--- a/index.html
+++ b/index.html
@@ -185,8 +185,7 @@
                   </div>
                </div>
 
-
-<!-- ///THIRD CARD                -->
+               <!-- ///THIRD CARD                -->
                <div class="col-1-of-3">
                   <div class="card">
                      <div class="card__side card__side--front card__shadow-3">
@@ -219,49 +218,108 @@
                </div>
             </div>
 
-  <!-- /// BUTTON--------------- -->
+            <!-- /// BUTTON--------------- -->
             <div class="u-center-text u-margin-top-big">
                <a href="#" class="btn btn--green">Discover all tours</a>
             </div>
 
             <!-- /// -->
          </section>
+
+         <!-- /// STORIES SECTION -------------------------  -->
+
+         <section class="section-stories">
+            <div class="bg-video">
+               <video class="bg-video__content" autoplay muted loop>
+                  <source src="img/video.mp4" type="video/mp4">
+                  <source src="img/video.webm" type="video/webm">
+                  You browser is not supported!
+               </video>
+            </div>
+
+
+            <div class="u-center-text u-margin-bottom-big">
+               <h2 class="heading-secondary">We make people genuinely happy</h2>
+            </div>
+            <!-- ---// FIRST STORY -------------------------  -->
+            <div class="row">
+               <div class="story">
+                  <figure class="story__shape">
+                     <img src="img/nat-8.jpg" alt="person on a tour" class="story__img" />
+                     <figcaption class="story__caption">Mary Smith</figcaption>
+                  </figure>
+                  <div class="story__text">
+                     <h3 class="heading-tertiary margin-bottom-small">I had the best week with my family</h3>
+
+                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic quisquam nobis natus, quaerat
+                     animi ut veniam incidunt consequuntur a! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                     Ullam earum voluptates, nulla animi vel nesciunt. It was a great experience.
+                  </div>
+               </div>
+            </div>
+
+            <!-- // ------- SECOND STORY ---------- - -->
+            <div class="row">
+               <div class="story">
+                  <figure class="story__shape">
+                     <img src="img/nat-9.jpg" alt="person on a tour" class="story__img" />
+                     <figcaption class="story__caption">Jack Wilson</figcaption>
+                  </figure>
+                  <div class="story__text">
+                     <h3 class="heading-tertiary margin-bottom-small">Wow! My life is completely different now</h3>
+
+                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur doloremque neque tenetur
+                     quaerat optio saepe obcaecati officia maxime a excepturi, fuga eos dolor atque expedita quos
+                     laudantium illum sunt fugiat at consequatur alias consectetur architecto praesentium repellendus.
+                     Ea voluptatum magni dolorum quos eius voluptatibus voluptates?
+                  </div>
+               </div>
+            </div>
+            <!-- 
+//------------BUTTON ---------- -->
+            <div class="u-center-text u-margin-top-big">
+               <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+         </section>
       </main>
-      <!-- 
-    <section class="grid-test">
-      <div class="row">
-        <div class="col-1-of-2">Col 1 of 2</div>
-        <div class="col-1-of-2">Col 1 of 2</div>
-      </div>
+      
 
-      <div class="row">
-        <div class="col-1-of-3">Col 1 of 3</div>
-        <div class="col-1-of-3">Col 1 of 3</div>
-        <div class="col-1-of-3">Col 1 of 3</div>
-      </div>
+<!-- 
+      
+<section class="grid-test">
+   <div class="row">
+      div class="col-1-of-2">Col 1 of 2</div>
+      <div class="col-1-of-2">Col 1 of 2</div>
+   </div>
 
-      <div class="row">
-        <div class="col-1-of-3">Col 1 of 3</div>
-        <div class="col-2-of-3">Col 2 of 3</div>
-      </div>
+   <div class="row">
+      <div class="col-1-of-3">Col 1 of 3</div>
+      <div class="col-1-of-3">Col 1 of 3</div>
+      <div class="col-1-of-3">Col 1 of 3</div>
+   </div>
 
-      <div class="row">
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-1-of-4">Col 1 of 4</div>
-      </div>
+   <div class="row">
+      <div class="col-1-of-3">Col 1 of 3</div>
+      <div class="col-2-of-3">Col 2 of 3</div>
+   </div>
 
-      <div class="row">
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-2-of-4">Col 2 of 4</div>
-      </div>
+   <div class="row">
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-1-of-4">Col 1 of 4</div>
+   </div>
 
-      <div class="row">
-        <div class="col-1-of-4">Col 1 of 4</div>
-        <div class="col-3-of-4">Col 3 of 4</div>
-      </div> -->
-      <!-- </section> -->
+   <div class="row">
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-2-of-4">Col 2 of 4</div>
+   </div>
+
+   <div class="row">
+      <div class="col-1-of-4">Col 1 of 4</div>
+      <div class="col-3-of-4">Col 3 of 4</div>
+   </div> -->
+</section> -->
    </body>
 </html>
