Completion of bg-video

--- a/index.html
+++ b/index.html
@@ -249,11 +249,12 @@
                      <figcaption class="story__caption">Mary Smith</figcaption>
                   </figure>
                   <div class="story__text">
-                     <h3 class="heading-tertiary margin-bottom-small">I had the best week with my family</h3>
+                     <h3 class="heading-tertiary u-margin-bottom-small">I had the best week with my family</h3>
 
-                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic quisquam nobis natus, quaerat
+                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius hic quisquam nobis natus, quaerat
                      animi ut veniam incidunt consequuntur a! Lorem ipsum dolor sit amet consectetur adipisicing elit.
                      Ullam earum voluptates, nulla animi vel nesciunt. It was a great experience.
+                     </p>
                   </div>
                </div>
             </div>
@@ -266,12 +267,13 @@
                      <figcaption class="story__caption">Jack Wilson</figcaption>
                   </figure>
                   <div class="story__text">
-                     <h3 class="heading-tertiary margin-bottom-small">Wow! My life is completely different now</h3>
+                     <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now</h3>
 
-                     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur doloremque neque tenetur
+                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur doloremque neque tenetur
                      quaerat optio saepe obcaecati officia maxime a excepturi, fuga eos dolor atque expedita quos
                      laudantium illum sunt fugiat at consequatur alias consectetur architecto praesentium repellendus.
                      Ea voluptatum magni dolorum quos eius voluptatibus voluptates?
+                     </p>
                   </div>
                </div>
             </div>
