--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <!-- //
 // -->
             <div class="row">
-               <!-- FIRST CARD -->
+<!-- FIRST CARD -->
                <div class="col-1-of-3">
                   <div class="card">
                      <div class="card__side card__side--front card__shadow-1">
@@ -151,7 +151,6 @@
                   </div>
                </div>
                <!-- //
-
 
 <!- SECOND CARD -->
                <div class="col-1-of-3">
@@ -185,7 +184,7 @@
                   </div>
                </div>
 
-               <!-- ///THIRD CARD                -->
+<!-- ///THIRD CARD                -->
                <div class="col-1-of-3">
                   <div class="card">
                      <div class="card__side card__side--front card__shadow-3">
@@ -193,7 +192,7 @@
                         <h4 class="card__heading">
                            <span class="card__heading_span card__heading-span--3">The snow adventurer</span>
                         </h4>
-                        <!-- // -->
+<!-- // -->
                         <div class="card__details">
                            <ul>
                               <li>5 day tours</li>
@@ -204,7 +203,7 @@
                            </ul>
                         </div>
                      </div>
-                     <!-- // -->
+<!-- // -->
                      <div class="card__side card__side--back card__side--back-3">
                         <div class="card__cta">
                            <div class="card__price-box">
@@ -218,16 +217,14 @@
                </div>
             </div>
 
-            <!-- /// BUTTON--------------- -->
+<!-- /// BUTTON---->
             <div class="u-center-text u-margin-top-big">
                <a href="#" class="btn btn--green">Discover all tours</a>
             </div>
-
-            <!-- /// -->
+<!--  -->
          </section>
 
-         <!-- /// STORIES SECTION -------------------------  -->
-
+<!-- /// STORIES SECTION -------------------------  -->
          <section class="section-stories">
             <div class="bg-video">
                <video class="bg-video__content" autoplay muted loop>
@@ -241,7 +238,7 @@
             <div class="u-center-text u-margin-bottom-big">
                <h2 class="heading-secondary">We make people genuinely happy</h2>
             </div>
-            <!-- ---// FIRST STORY -------------------------  -->
+<!-- ---// FIRST STORY  -->
             <div class="row">
                <div class="story">
                   <figure class="story__shape">
@@ -259,7 +256,7 @@
                </div>
             </div>
 
-            <!-- // ------- SECOND STORY ---------- - -->
+<!-- // ------- SECOND STORY  -->
             <div class="row">
                <div class="story">
                   <figure class="story__shape">
@@ -277,10 +274,61 @@
                   </div>
                </div>
             </div>
-            <!-- 
-//------------BUTTON ---------- -->
+            
+   <!-- -----------BUTTON ------- -->
             <div class="u-center-text u-margin-top-big">
                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+<!--  -->
+         </section>
+
+
+<!-- //   -----BOOKING SECTION ------- -------- -->
+         <section class="section-book">
+            <div class="row">
+               <div class="book">
+                  <div class="book__form">
+                     <form action="#" class="form">
+
+                        <div class="u-margin-bottom-medium">
+                           <h2 class="heading-secondary">Start booking now!</h2>
+                        </div>
+
+                        <div class="form__group">
+                           <input type="text" class="form__input" placeholder="Full Name" id="name" required>
+                           <label for="name" class="form__label">Full Name</label>
+                        </div>
+
+                        <div class="form__group">
+                           <input type="email" class="form__input" placeholder="Email" id="email" required>
+                           <label for="email" class="form__label">Email address</label>
+                        </div>
+<!-- //RADIO BUTTONS--                                          -->
+                        <div class="form__group u-margin-bottom-medium">
+                           <div class="form__radio-group" >
+                              <input type="radio" class="form__radio-input" id="small" name="size">
+                              <label for="small" class="form__radio-label">
+                                 <span class="form__radio-button"></span>
+                                 Small tour group
+                              </label>
+                           </div>
+<!-- /-->
+                           <div class="form__radio-group">
+                              <input type="radio" class="form__radio-input" id="large"  name="size">
+                              <label for="large" class="form__radio-label">
+                                 <span class="form__radio-button"></span>
+                                 Large tour group
+                              </label>
+                           </div>
+                        </div>
+<!-- BUTTON -->
+                        <div class="form__group">
+                           <button class="btn btn--green">Next step</button>
+                        </div>
+                        
+                     </form>
+                  </div>
+               </div>
             </div>
          </section>
       </main>
