Completion of Menu section and custom icons

--- a/index.html
+++ b/index.html
@@ -13,6 +13,41 @@
       <title>Natours | Exciting tours for adventurous people</title>
    </head>
    <body>
+
+<!-- //--- NAVIGATION DROPDOWN COMPONENT---- -->
+      <div class="navigation">
+         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+
+
+
+         <label for="navi-toggle" class="navigation__button">
+            <span class="navigation__icon">&nbsp;</span>
+            <!-- //MY HEROICON ALTERNATE - OPEN ICON -->
+            <!-- <svg class="navigation__open" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+            </svg> -->
+            <!-- //MY HEROICON ALTERNATE - CLOSE ICON -->
+            <!-- <svg class="navigation__close" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+            </svg>  -->
+         </label>
+
+         <div class="navigation__background">&nbsp;</div>
+
+         <nav class="navigation__nav">
+            <ul class="navigation__list">
+               <li class="navigation__item"><a href="#" class="navigation__link">About Natours</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Your benefits</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Popular tours</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Stories</a></li>
+               <li class="navigation__item"><a href="#" class="navigation__link">Book now</a></li>
+            </ul>
+         </nav>
+      </div>
+
+
+
+<!-- //---HEADER------- -->
       <header class="header">
          <div class="header__logo-box">
             <img src="img/logo-white.png" alt="Logo" class="header__logo" />
