Completion of Popup section

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+            <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
          </div>
       </header>
 
@@ -147,7 +147,7 @@
             </div>
          </section>
 
-         <section class="section-tours">
+         <section class="section-tours" id= "section-tours">
             <div class="u-center-text u-margin-bottom-big">
                <h2 class="heading-secondary">Most Popular Tours</h2>
             </div>
@@ -180,7 +180,7 @@
                               <p class="card__price-only">Only</p>
                               <p class="card__price-value">$299</p>
                            </div>
-                           <a href="#" class="btn btn--white">Book now!</a>
+                           <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                      </div>
                   </div>
@@ -213,7 +213,7 @@
                               <p class="card__price-only">Only</p>
                               <p class="card__price-value">$599</p>
                            </div>
-                           <a href="#" class="btn btn--white">Book now!</a>
+                           <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                      </div>
                   </div>
@@ -245,7 +245,7 @@
                               <p class="card__price-only">Only</p>
                               <p class="card__price-value">$899</p>
                            </div>
-                           <a href="#" class="btn btn--white">Book now!</a>
+                           <a href="#popup" class="btn btn--white">Book now!</a>
                         </div>
                      </div>
                   </div>
@@ -395,6 +395,24 @@
                   
             </div>
          </footer>
+
+<!-- //  POP-UP-----  -->
+         <div class="popup" id="popup">
+            <div class="popup__content">
+               <div class="popup__left">
+                  <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+                  <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+               </div>
+<!-- // -->
+               <div class="popup__right">
+                  <a href="#section-tours" class="popup__close">&times;</a>
+                  <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                  <h3 class="heading-tertiary  u-margin-bottom-small">Important &ndash; Please read these terms</h3>
+                  <p class="popup__text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse optio non minus voluptate, doloribus distinctio minima voluptatum eos ut illum fugit itaque, repellat quisquam mollitia! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos ipsam illum quas. Quaerat minima fugiat reprehenderit suscipit quos? Dolor tempore labore molestias repellat doloribus eaque aperiam reiciendis ab ducimus nostrum? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut perferendis alias officia repudiandae, vel praesentium. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odio voluptatem accusamus quod officiis blanditiis, illum facilis incidunt quam qui aut.</p>
+                  <a href="#" class="btn btn--green">Book now</a>
+               </div>
+            </div>
+         </div>
       </main>
       
 
